[package]
name = "concurrent-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fork-join"
path = "src/fork_join.rs"

[[bin]]
name = "task"
path = "src/task.rs"

[[bin]]
name = "vectorization"
path = "src/vectorization.rs"

[[bin]]
name = "lock"
path = "src/lock.rs"

[[bin]]
name = "semaphore"
path = "src/semaphore.rs"

[dependencies]

# fork-join
rayon = "1.8.0"

# async
async-std = "1.9.0"
futures-lite = "1.12.0"
futures = "0.3.15"

# semaphore
std-semaphore = "0.1.0"
